--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,6 +90,23 @@ p.small {
 	text-align: center;
 }
 
+.search {
+	background-color: white;
+	max-width: 800px;
+	margin: 0 auto;
+	position: relative;
+	top: 80px;
+	padding-bottom: 30px;
+	border-radius: 5px;
+	box-shadow: 0 5px 50px rgba(0,0,0,0.4);
+	text-align: center;
+}
+
+.search input {
+	background-color: white;
+	max-width: 800px;
+}
+
 .login-box .box-header {
 	background-color: #665851;
 	margin-top: 0;
