--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,20 +91,20 @@ p.small {
 }
 
 .search {
-	background-color: white;
+    padding-top: 80px;
+    padding-right: 30px;
+    float: right;
 	max-width: 800px;
-	margin: 0 auto;
-	position: relative;
-	top: 80px;
-	padding-bottom: 30px;
-	border-radius: 5px;
-	box-shadow: 0 5px 50px rgba(0,0,0,0.4);
-	text-align: center;
+	margin: 0 0;
 }
 
 .search input {
-	background-color: white;
-	max-width: 800px;
+	margin-bottom: 20px;
+	padding: 8px;
+	border: 1px solid #ccc;
+	border-radius: 2px;
+	font-size: .9em;
+	color: #888;
 }
 
 .login-box .box-header {
@@ -177,4 +177,14 @@ p.small {
 .login-box {
   -webkit-animation-duration: 1s;
   -webkit-animation-delay: 1s;
+}
+
+.action-icon {
+    width: 16px;
+    float: right;
+    padding: 3px;
+}
+
+.liked {
+    width: 20px;
 }
